--- a/src/app/src/main/res/values-night/themes.xml
+++ b/src/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <style name="Theme.TrackR" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:statusBarColor">@color/background</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 </resources>
